<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">懒人理财</string>
    <string name="dummy_button">进入理财</string>
    <string name="dummy_content">正文</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_again">请再次输入</string>
    <string name="asset_details">资产情况</string>
    <string name="total_asset">总资产</string>
    <string name="last_month_increase">上月新增</string>
    <string name="average_increase">平均新增</string>
    <string name="update_date">更新日期</string>
    <string name="no_pwd_input_title">提示</string>
    <string name="no_pwd_input_message">未输入密码</string>
    <string name="no_pwd_again_input_message">请再次输入密码</string>
    <string name="pwd_not_match_message">两次密码不一致</string>
    <string name="pwd_error">密码错误</string>
    <string name="no_pwd_input_confirm">确定</string>
    <string name="update_asset">更新资产</string>
    <string name="bank_current_deposit">活期存款</string>
    <string name="bank_fixed_deposit">定期存款</string>
    <string name="insurance_asset">保险投资</string>
    <string name="fund">基金</string>

</resources>
